--- a/myproject/posts/templates/posts/posts_list.html
+++ b/myproject/posts/templates/posts/posts_list.html
@@ -1,5 +1,19 @@
 {% extends "layout.html" %}
-{% block title %} Posts List {% endblock %} 
+{% block title %} Posts {% endblock %} 
 {% block content %}
-<h1>Posts List</h1>
+<section>
+    <h1>Posts</h1>
+    {% for post in posts %}
+    <article class="post">
+        <h2>
+            <a href="{% url 'posts:page' slug=post.slug %}">
+                {{post.title}}
+            </a>
+        </h2>
+        <p>{{post.body}}</p>
+        <p>{{post.slug}}</p>
+        <p>{{post.date}}</p>
+    </artical>    
+    {% endfor %}
+</section>
 {% endblock %}
